# something

./: .gitignore  CLAUDE.md  DESIGN_OVERVIEW.md  DETAILED_DESIGN.md  DEVELOPMENT_GUIDELINES.md  INSTALL_RUST_WINDOWS.md  ITERATION_SUMMARY_v0.1.0.md  ITERATION_SUMMARY_v0.2.0.md  ITERATION_SUMMARY_v0.3.0.md  ITERATION_SUMMARY_v0.4.0.md  README.md  RUN_GUIDE.md  TEST_GUIDE.md  TEST_SUMMARY.md  build.bat  index.html  package-lock.json  package.json  test_db.rs  tsconfig.json  vitest.config.ts
.claude/: settings.local.json  team-roles.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: directory_watcher.rs  file.rs  mod.rs  search.rs  tag.rs  watcher.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.sql  tests.rs
src-tauri/src/search/: index.rs  tests.rs
src-tauri/src/tagger/: auto.rs  mod.rs  rules.rs
src-tauri/src/watcher/: event.rs  mod.rs  queue.rs  scanner.rs  tests.rs
src/components/AddTagModal/: index.tsx
src/components/FileList/: index.tsx
src/components/SearchBar/: index.tsx
src/components/SettingsPanel/: index.tsx
src/components/TagPanel/: index.tsx
src/components/Toast/: index.tsx
src/components/WatchedDirectories/: index.tsx
src/components/__tests__/: FileList.test.tsx  SearchBar.test.tsx  TagPanel.test.tsx
src/lib/: api.ts  utils.ts
src/lib/__tests__/: utils.test.ts
src/stores/: useStore.ts
src/test/: setup.ts  test-utils.tsx
src/types/: api.ts
