[package]
name = "file-tag-manager"
version = "0.1.0"
description = "文件标签管理系统"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
notify = { version = "6", features = ["serde"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
dirs = "5"
async-trait = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
